rasa-core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rasa-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chat-bot.elbukaevzaur-beginend-landing-aed5.twc1.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rasa-core-service
                port:
                  number: 80
